--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="color1">#ffea00</color>
     <color name="colorb">#171c30</color>
     <color name="color2">#4f5ff3</color>
-
+    <color name="color3">#ff000d</color>
+    <color name="ringColor">#f7e277</color>
 
 </resources>
