--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,6 @@
     <color name="colorb">#171c30</color>
     <color name="color2">#4f5ff3</color>
     <color name="color3">#ff000d</color>
-    <color name="ringColor">#f7e277</color>
+    <color name="ringColor">#b5f7e277</color>
 
 </resources>
